optimizacion de usuario registrar